--- a/src/components/discoverContent/discoverContent.css
+++ b/src/components/discoverContent/discoverContent.css
@@ -1,10 +1,18 @@
 .discover-content {
-    padding: 20px;
+    padding: 10px 20px;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: space-around;
 }
-/*.discover-content::after {*/
-/*    content: "";*/
-/*    flex: auto;*/
-/*}*/
+
+::-webkit-scrollbar {
+    width: 5px;
+}
+
+::-webkit-scrollbar-thumb {
+    background: rgb(136, 136, 136);
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: rgb(85, 85, 85);
+}
