--- a/src/components/discoverHeader/discoverHeader.css
+++ b/src/components/discoverHeader/discoverHeader.css
@@ -3,7 +3,7 @@
     justify-content: space-between;
     align-items: center;
     color: rgb(76, 164, 199);
-    padding-bottom: 10px;
+    padding: 10px 25px;
 }
 
 .header-links .link {
