--- a/src/components/discoverHeader/discoverHeader.css
+++ b/src/components/discoverHeader/discoverHeader.css
@@ -17,3 +17,26 @@
 .white-text {
     color: white;
 }
+
+.discover-header .search {
+    display: inline-flex;
+}
+
+.discover-header .search i {
+    color: rgb(128, 137, 150);
+}
+
+.search-box {
+    border: 0;
+    background-color: rgb(45, 51, 61);
+    width: 100px;
+    font-size: 1.2em;
+}
+
+.search-box::-webkit-input-placeholder {
+    color: rgb(76, 164, 199);
+}
+
+.search-box:focus {
+    outline: none;
+}
